--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 ### Paths #################################################
 
 # Point to the path of your applications code on your host
-APP_CODE_PATH_HOST=../
+APP_CODE_PATH_HOST=../../laradock-projects-prod/
 
 # Point to where the `APP_CODE_PATH_HOST` should be in the container
 APP_CODE_PATH_CONTAINER=/var/www
@@ -39,7 +39,7 @@ COMPOSE_PROJECT_NAME=laradock
 
 # Select a PHP version of the Workspace and PHP-FPM containers (Does not apply to HHVM).
 # Accepted values: 8.3 - 8.2 - 8.1 - 8.0 - 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
-PHP_VERSION=8.3
+PHP_VERSION=8.2
 
 ### Phalcon Version ###########################################
 
@@ -81,7 +81,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 ### Environment ###########################################
 
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
-CHANGE_SOURCE=false
+CHANGE_SOURCE=true
 # Set ORACLE INSTANT_CLIENT_MIRROR option if you want to use Intranet improve download, you can download files first
 ORACLE_INSTANT_CLIENT_MIRROR=https://github.com/the-paulus/oracle-instantclient/raw/master/
 ORACLE_INSTANT_CLIENT_ARCH=x86_64
@@ -91,7 +91,7 @@ ORACLE_INSTANT_CLIENT_MINOR=3
 ### Docker Sync ###########################################
 
 # If you are using Docker Sync. For `osx` use 'native_osx', for `windows` use 'unison', for `linux` docker-sync is not required
-DOCKER_SYNC_STRATEGY=native_osx
+DOCKER_SYNC_STRATEGY=unison
 
 ### Install Oh My ZSH! ####################################
 
@@ -112,10 +112,10 @@ WORKSPACE_COMPOSER_GLOBAL_INSTALL=true
 WORKSPACE_COMPOSER_VERSION=2
 WORKSPACE_COMPOSER_AUTH_JSON=false
 WORKSPACE_COMPOSER_REPO_PACKAGIST=
-WORKSPACE_NVM_NODEJS_ORG_MIRROR=
+WORKSPACE_NVM_NODEJS_ORG_MIRROR=http://npm.taobao.org/mirrors/node
 WORKSPACE_INSTALL_NODE=true
 WORKSPACE_NODE_VERSION=node
-WORKSPACE_NPM_REGISTRY=
+WORKSPACE_NPM_REGISTRY=https://registry.npmmirror.com/
 WORKSPACE_NPM_FETCH_RETRIES=2
 WORKSPACE_NPM_FETCH_RETRY_FACTOR=10
 WORKSPACE_NPM_FETCH_RETRY_MINTIMEOUT=10000
@@ -130,12 +130,12 @@ WORKSPACE_INSTALL_NPM_ANGULAR_CLI=false
 WORKSPACE_INSTALL_NPM_CHECK_UPDATES_CLI=false
 WORKSPACE_INSTALL_POPPLER_UTILS=false
 WORKSPACE_INSTALL_PHPREDIS=true
-WORKSPACE_INSTALL_WORKSPACE_SSH=false
+WORKSPACE_INSTALL_WORKSPACE_SSH=true
 WORKSPACE_INSTALL_SUBVERSION=false
 WORKSPACE_INSTALL_BZ2=false
 WORKSPACE_INSTALL_GMP=false
 WORKSPACE_INSTALL_GNUPG=false
-WORKSPACE_INSTALL_XDEBUG=false
+WORKSPACE_INSTALL_XDEBUG=true
 WORKSPACE_INSTALL_PCOV=false
 WORKSPACE_INSTALL_PHPDBG=false
 WORKSPACE_INSTALL_SSH2=false
@@ -159,30 +159,30 @@ WORKSPACE_INSTALL_OCI8=false
 WORKSPACE_INSTALL_V8JS=false
 WORKSPACE_INSTALL_LARAVEL_ENVOY=false
 WORKSPACE_INSTALL_LARAVEL_INSTALLER=false
-WORKSPACE_INSTALL_XLSWRITER=false
+WORKSPACE_INSTALL_XLSWRITER=true
 WORKSPACE_INSTALL_DEPLOYER=false
 WORKSPACE_INSTALL_PRESTISSIMO=false
 WORKSPACE_INSTALL_LINUXBREW=false
 WORKSPACE_INSTALL_MC=false
 WORKSPACE_INSTALL_SYMFONY=false
 WORKSPACE_INSTALL_PYTHON=false
-WORKSPACE_INSTALL_PYTHON3=false
+WORKSPACE_INSTALL_PYTHON3=true
 WORKSPACE_INSTALL_POWERLINE=false
 WORKSPACE_INSTALL_SUPERVISOR=false
 WORKSPACE_INSTALL_IMAGE_OPTIMIZERS=false
-WORKSPACE_INSTALL_IMAGEMAGICK=false
+WORKSPACE_INSTALL_IMAGEMAGICK=true
 WORKSPACE_IMAGEMAGICK_VERSION=latest
 WORKSPACE_INSTALL_TERRAFORM=false
 WORKSPACE_INSTALL_DUSK_DEPS=false
 WORKSPACE_INSTALL_PG_CLIENT=false
 WORKSPACE_INSTALL_PHALCON=false
-WORKSPACE_INSTALL_SWOOLE=false
+WORKSPACE_INSTALL_SWOOLE=true
 WORKSPACE_INSTALL_TAINT=false
-WORKSPACE_INSTALL_LIBPNG=false
-WORKSPACE_INSTALL_GRAPHVIZ=false
+WORKSPACE_INSTALL_LIBPNG=true
+WORKSPACE_INSTALL_GRAPHVIZ=true
 WORKSPACE_INSTALL_IONCUBE=false # PHP 8.2 is not supported yet.
 WORKSPACE_INSTALL_MYSQL_CLIENT=false
-WORKSPACE_INSTALL_PING=false
+WORKSPACE_INSTALL_PING=true
 WORKSPACE_INSTALL_SSHPASS=false
 WORKSPACE_INSTALL_INOTIFY=false
 WORKSPACE_INSTALL_FSWATCH=false
@@ -194,9 +194,9 @@ WORKSPACE_INSTALL_APCU=false
 WORKSPACE_PUID=1000
 WORKSPACE_PGID=1000
 WORKSPACE_CHROME_DRIVER_VERSION=2.42
-WORKSPACE_TIMEZONE=UTC
-WORKSPACE_SSH_PORT=2222
-WORKSPACE_INSTALL_FFMPEG=false
+WORKSPACE_TIMEZONE=Asia/Shanghai
+WORKSPACE_SSH_PORT=22222
+WORKSPACE_INSTALL_FFMPEG=true
 WORKSPACE_INSTALL_AUDIOWAVEFORM=false
 WORKSPACE_INSTALL_WKHTMLTOPDF=false
 WORKSPACE_WKHTMLTOPDF_VERSION=0.12.6-1
@@ -205,24 +205,27 @@ WORKSPACE_INSTALL_AST=true
 WORKSPACE_AST_VERSION=1.0.10
 WORKSPACE_BROWSERSYNC_HOST_PORT=3000
 WORKSPACE_BROWSERSYNC_UI_HOST_PORT=3001
-WORKSPACE_VUE_CLI_SERVE_HOST_PORT=8080
-WORKSPACE_VUE_CLI_UI_HOST_PORT=8001
-WORKSPACE_ANGULAR_CLI_SERVE_HOST_PORT=4200
+WORKSPACE_VUE_CLI_SERVE_HOST_PORT=58080
+WORKSPACE_VUE_CLI_UI_HOST_PORT=58001
+WORKSPACE_ANGULAR_CLI_SERVE_HOST_PORT=
 WORKSPACE_INSTALL_GIT_PROMPT=false
 WORKSPACE_INSTALL_DOCKER_CLIENT=false
 WORKSPACE_INSTALL_LNAV=false
-WORKSPACE_INSTALL_PROTOC=false
 WORKSPACE_INSTALL_PHPDECIMAL=false
 WORKSPACE_INSTALL_ZOOKEEPER=false
 WORKSPACE_INSTALL_SSDB=false
 WORKSPACE_INSTALL_TRADER=false
-WORKSPACE_PROTOC_VERSION=latest
 WORKSPACE_INSTALL_MEMCACHED=true
-WORKSPACE_INSTALL_EVENT=false
+WORKSPACE_INSTALL_EVENT=true
 WORKSPACE_INSTALL_DNSUTILS=true
 WORKSPACE_XDEBUG_PORT=9000
-WORKSPACE_VITE_PORT=5173
+WORKSPACE_VITE_PORT=51730
 WORKSPACE_INSTALL_JDK=true
+WORKSPACE_INSTALL_OPENTELEMETRY=true
+WORKSPACE_INSTALL_PROTOC=true
+WORKSPACE_PROTOC_VERSION=latest
+WORKSPACE_INSTALL_GRPC=true
+WORKSPACE_INSTALL_PROTOBUF=true
 
 ### PHP_FPM ###############################################
 
@@ -236,17 +239,17 @@ PHP_FPM_INSTALL_OPCACHE=true
 PHP_FPM_INSTALL_IMAGE_OPTIMIZERS=true
 PHP_FPM_INSTALL_PHPREDIS=true
 PHP_FPM_INSTALL_MEMCACHED=false
-PHP_FPM_INSTALL_BZ2=false
+PHP_FPM_INSTALL_BZ2=true
 PHP_FPM_INSTALL_ENCHANT=false
 PHP_FPM_INSTALL_GMP=false
 PHP_FPM_INSTALL_GNUPG=false
-PHP_FPM_INSTALL_XDEBUG=false
+PHP_FPM_INSTALL_XDEBUG=true
 PHP_FPM_INSTALL_PCOV=false
 PHP_FPM_INSTALL_XHPROF=false
 PHP_FPM_INSTALL_PHPDBG=false
 PHP_FPM_INSTALL_SMB=false
-PHP_FPM_INSTALL_IMAP=false
-PHP_FPM_INSTALL_MONGO=false
+PHP_FPM_INSTALL_IMAP=true
+PHP_FPM_INSTALL_MONGO=true
 PHP_FPM_INSTALL_AMQP=false
 PHP_FPM_INSTALL_CASSANDRA=false
 PHP_FPM_INSTALL_ZMQ=false
@@ -255,20 +258,20 @@ PHP_FPM_INSTALL_MSSQL=false
 PHP_FPM_INSTALL_SSH2=false
 PHP_FPM_INSTALL_SOAP=false
 PHP_FPM_INSTALL_XSL=false
-PHP_FPM_INSTALL_EXIF=false
+PHP_FPM_INSTALL_EXIF=true
 PHP_FPM_INSTALL_AEROSPIKE=false
 PHP_FPM_INSTALL_OCI8=false
 PHP_FPM_INSTALL_PGSQL=false
 PHP_FPM_INSTALL_GHOSTSCRIPT=false
 PHP_FPM_INSTALL_LDAP=false
 PHP_FPM_INSTALL_PHALCON=false
-PHP_FPM_INSTALL_SWOOLE=false
+PHP_FPM_INSTALL_SWOOLE=true
 PHP_FPM_INSTALL_TAINT=false
 PHP_FPM_INSTALL_PG_CLIENT=false
 PHP_FPM_INSTALL_POSTGIS=false
-PHP_FPM_INSTALL_PCNTL=false
+PHP_FPM_INSTALL_PCNTL=true
 PHP_FPM_INSTALL_CALENDAR=false
-PHP_FPM_INSTALL_FAKETIME=false
+PHP_FPM_INSTALL_FAKETIME=true
 PHP_FPM_INSTALL_IONCUBE=false # PHP 8.2 is not supported yet.
 PHP_FPM_INSTALL_RDKAFKA=false
 PHP_FPM_INSTALL_GETTEXT=false
@@ -278,14 +281,14 @@ PHP_FPM_INSTALL_APCU=false
 PHP_FPM_INSTALL_CACHETOOL=false
 PHP_FPM_INSTALL_YAML=false
 PHP_FPM_INSTALL_ADDITIONAL_LOCALES=false
-PHP_FPM_INSTALL_MYSQL_CLIENT=false
-PHP_FPM_INSTALL_PING=false
+PHP_FPM_INSTALL_MYSQL_CLIENT=true
+PHP_FPM_INSTALL_PING=true
 PHP_FPM_INSTALL_SSHPASS=false
 PHP_FPM_INSTALL_MAILPARSE=false
 PHP_FPM_INSTALL_WKHTMLTOPDF=false
 PHP_FPM_WKHTMLTOPDF_VERSION=0.12.6.1-3
-PHP_FPM_INSTALL_XLSWRITER=false
-PHP_FPM_INSTALL_PHPDECIMAL=false
+PHP_FPM_INSTALL_XLSWRITER=true
+PHP_FPM_INSTALL_PHPDECIMAL=true
 PHP_FPM_INSTALL_ZOOKEEPER=false
 PHP_FPM_INSTALL_SSDB=false
 PHP_FPM_INSTALL_TRADER=false
@@ -298,6 +301,13 @@ PHP_FPM_XDEBUG_PORT=9000
 PHP_FPM_INSTALL_EVENT=false
 PHP_FPM_INSTALL_DNSUTILS=true
 PHP_FPM_INSTALL_POPPLER_UTILS=false
+PHP_FPM_HOST_LOG_PATH=./logs/php-fpm/
+PHP_FPM_INSTALL_OPENTELEMETRY=true
+PHP_FPM_INSTALL_GRPC=true
+PHP_FPM_INSTALL_PROTOBUF=true
+PHP_FPM_INSTALL_PROTOC=true
+PHP_FPM_PROTOC_VERSION=latest
+
 
 PHP_FPM_PUID=1000
 PHP_FPM_PGID=1000
@@ -305,8 +315,8 @@ PHP_FPM_PGID=1000
 ### PHP_FPM_NEW_RELIC #####################################
 
 PHP_FPM_NEW_RELIC=false
-PHP_FPM_NEW_RELIC_KEY=0000
-PHP_FPM_NEW_RELIC_APP_NAME=app_name
+PHP_FPM_NEW_RELIC_KEY=b526f43fca6b53f8185ed38992bc0849FFFFNRAL
+PHP_FPM_NEW_RELIC_APP_NAME=owladmin.localhost
 
 ### PHP_WORKER ############################################
 
@@ -332,19 +342,20 @@ PHP_WORKER_INSTALL_ZIP_ARCHIVE=false
 PHP_WORKER_INSTALL_MYSQL_CLIENT=false
 PHP_WORKER_INSTALL_AMQP=false
 PHP_WORKER_INSTALL_GHOSTSCRIPT=false
-PHP_WORKER_INSTALL_SWOOLE=false
+PHP_WORKER_INSTALL_SWOOLE=true
 PHP_WORKER_INSTALL_TAINT=false
 PHP_WORKER_INSTALL_FFMPEG=false
 PHP_WORKER_INSTALL_AUDIOWAVEFORM=false
 PHP_WORKER_INSTALL_CASSANDRA=false
 PHP_WORKER_INSTALL_GEARMAN=false
-PHP_WORKER_INSTALL_REDIS=false
+PHP_WORKER_INSTALL_REDIS=true
 PHP_WORKER_INSTALL_IMAP=false
 PHP_WORKER_INSTALL_XMLRPC=false
 PHP_WORKER_INSTALL_SSDB=false
-PHP_WORKER_INSTALL_EVENT=false
+PHP_WORKER_INSTALL_EVENT=true
 PHP_WORKER_INSTALL_INTL=true
 PHP_WORKER_INSTALL_POPPLER_UTILS=false
+PHP_FPM_INSTALL_OPENTELEMETRY=true
 
 PHP_WORKER_PUID=1000
 PHP_WORKER_PGID=1000
@@ -371,18 +382,18 @@ OPENRESTY_SSL_PATH=./openresty/ssl/
 
 ### LARAVEL_HORIZON ################################################
 
-LARAVEL_HORIZON_INSTALL_BZ2=false
+LARAVEL_HORIZON_INSTALL_BZ2=true
 LARAVEL_HORIZON_INSTALL_GD=false
 LARAVEL_HORIZON_INSTALL_GMP=false
 LARAVEL_HORIZON_INSTALL_GNUPG=false
 LARAVEL_HORIZON_INSTALL_LDAP=false
-LARAVEL_HORIZON_INSTALL_IMAGEMAGICK=false
+LARAVEL_HORIZON_INSTALL_IMAGEMAGICK=true
 LARAVEL_HORIZON_IMAGEMAGICK_VERSION=latest
-LARAVEL_HORIZON_INSTALL_SOCKETS=false
+LARAVEL_HORIZON_INSTALL_SOCKETS=true
 LARAVEL_HORIZON_INSTALL_YAML=false
-LARAVEL_HORIZON_INSTALL_ZIP_ARCHIVE=false
-LARAVEL_HORIZON_INSTALL_PHPREDIS=false
-LARAVEL_HORIZON_INSTALL_MONGO=false
+LARAVEL_HORIZON_INSTALL_ZIP_ARCHIVE=true
+LARAVEL_HORIZON_INSTALL_PHPREDIS=true
+LARAVEL_HORIZON_INSTALL_MONGO=true
 LARAVEL_HORIZON_INSTALL_CASSANDRA=false
 LARAVEL_HORIZON_INSTALL_FFMPEG=false
 LARAVEL_HORIZON_INSTALL_AUDIOWAVEFORM=false
@@ -407,9 +418,9 @@ APACHE_FOR_MAC_M1=false
 ### MYSQL #################################################
 
 MYSQL_VERSION=latest
-MYSQL_DATABASE=default
-MYSQL_USER=default
-MYSQL_PASSWORD=secret
+MYSQL_DATABASE=laradock
+MYSQL_USER=laradock
+MYSQL_PASSWORD=laradock
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
@@ -430,8 +441,8 @@ CLICKHOUSE_HOST_LOG_PATH=./logs/clickhouse
 
 ### REDIS #################################################
 
-REDIS_PORT=6379
-REDIS_PASSWORD=secret_redis
+REDIS_PORT=63790
+REDIS_PASSWORD=laradock
 
 ### REDIS CLUSTER #########################################
 
@@ -463,9 +474,9 @@ MSSQL_PORT=1433
 ### MARIADB ###############################################
 
 MARIADB_VERSION=latest
-MARIADB_DATABASE=default
-MARIADB_USER=default
-MARIADB_PASSWORD=secret
+MARIADB_DATABASE=laradock
+MARIADB_USER=laradock
+MARIADB_PASSWORD=laradock
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=root
 MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
